# openapi.yaml
@@ -331,6 +331,36 @@ paths:
             text/plain; charset=utf-8:
               schema:
                 type: string
+  /map/bounds:
+    get:
+      parameters:
+      - name: state
+        schema:
+          type: string
+        in: query
+        required: true
+        deprecated: false
+        explode: true
+      - name: city
+        schema:
+          type: string
+        in: query
+        required: false
+        deprecated: false
+        explode: true
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json; charset=utf-8:
+              schema:
+                $ref: '#/components/schemas/BoundingBox'
+        '500':
+          description: ''
+          content:
+            text/plain; charset=utf-8:
+              schema:
+                type: string
   /shops/{id}:
     get:
       parameters:
@@ -747,6 +777,27 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ArtistStyle'
+    BoundingBox:
+      type: object
+      title: BoundingBox
+      required:
+      - north_east_lat
+      - north_east_long
+      - south_west_lat
+      - south_west_long
+      properties:
+        north_east_lat:
+          type: number
+          format: float
+        north_east_long:
+          type: number
+          format: float
+        south_west_lat:
+          type: number
+          format: float
+        south_west_long:
+          type: number
+          format: float
     City:
       type: object
       title: City
